<resources>
    <string name="debug_show_server_settings_debug_item">Настройки сервера</string>
    <string name="debug_show_reused_component_debug_item">Переиспользуемые элементы</string>
    <string name="debug_show_fcm_token_debug_item">FCM-токен</string>
    <string name="debug_show_memory_debug_item">Память</string>
    <string name="debug_show_app_info_debug_item">Общая информация</string>
    <string name="debug_show_ui_tools_debug_item">UI-инструменты</string>
    <string name="debug_show_developer_tools_debug_item">Настройки разработчика</string>
    <string name="debug_show_app_settings_debug_item">Настройки приложения</string>
    <string name="debug_show_tools_debug_item">Остальные инструменты</string>
    <string name="debug_copy_fcm_btn_text">Скопировать</string>
    <string name="debug_fcm_copied_message">FCM-токен был скопирован в буфер обмена</string>
    <string name="debug_fcm_empty_text">FCM-токен еще не создан или не реализована логика сохранения токена в хранилище</string>
    <string name="debug_reload_btn_text">Обновить</string>
    <string name="debug_switch_subtitle_text">Chuck перехватывает и сохраняет все HTTP-запросы и ответы внутри приложения и предоставляет пользовательский интерфейс для проверки их содержимого.</string>
    <string name="debug_server_url_title_text">Тестовый сервер</string>
    <string name="debug_server_url_subtitle_text">Если включено, то будет использоваться тестовый сервер</string>
    <string name="debug_switch_title_text" translatable="false">Chuck</string>
    <string name="debug_leakcanary_text" translatable="false">LeakCanary</string>
    <string name="debug_leakcanary_subtitle_text">Библиотека обнаружения утечки памяти. LeakCanary автоматически покажет уведомление, когда в вашей отладочной сборке обнаружена утечка памяти в Activity или Fragment.</string>
    <string name="debug_stetho_title_text" translatable="false">Stetho</string>
    <string name="debug_stetho_subtitle_text">Библиотека которая позволяет дебажить приложение через Google Chrome. Для этого надо перейти в браузере по URL "chrome://inspect" и выбрать свое приложение.</string>
    <string name="debug_reboot_tw_start_text">Перезапуск через %1$s</string>
    <string name="debug_show_storage_debug_item">Просмотр хранилища</string>
    <string name="debug_app_info_version_code_text">Version Code : %1$d</string>
    <string name="debug_app_info_version_name_text">Version name : %1$s</string>
    <string name="debug_app_info_package_name_text">Package name : %1$s</string>
    <string name="debug_app_info_build_type_text">Build type : %1$s</string>
    <string name="debug_reboot_now_text">Сейчас</string>
    <string name="debug_reboot_cancel_text">Отмена</string>
    <string name="debug_reboot_canceled_toast">Для того чтобы изменения вступили в силу требуется перезапустить приложение</string>
    <string name="debug_fps_title_text">Show FPS</string>
    <string name="debug_fps_subtitle_text">Отображает количество FPS. При долгом нажатии на вью, можно передвинуть. При Двойном нажатии, исчезает.</string>

    <!-- Debug notification settings -->
    <string name="debug_notification_channel_id">CHANNEL_ID</string>
    <string name="debug_screen_title">Debug screen</string>
    <string name="debug_screen_body">Show debug info</string>

    <string name="debug_server_error_message">Произошла ошибка сервера. Попробуйте позже еще раз</string>
    <string name="debug_server_error_not_found">Произошла ошибка, данные не найдены. Попробуйте позже еще раз</string>
    <string name="debug_default_http_error_message">Произошла ошибка загрузки данных, возможно, не вся информация на экране актуальна</string>
    <string name="debug_forbidden_error_error_message">Доступ запрещен</string>
    <string name="debug_no_internet_connection_error_message">Не удалось загрузить данные. Проверьте соединение с интернетом и попробуйте еще раз</string>
    <string name="debug_bad_response_error_message">Произошла ошибка загрузки данных на экране. Попробуйте позже еще раз</string>
    <string name="debug_unexpected_error_error_message">Непредвиденная ошибка</string>
    <string name="debug_common_error_message">Произошла ошибка загрузки данных,\nпопробуйте обновить экран позже</string>

    <string name="debug_state_empty_text">Ничего не найдено</string>
    <string name="debug_state_error_message">Произошла ошибка</string>
    <string name="debug_state_error_btn">Обновить</string>


    <!--region ServerSettingsDebugActivityView-->
    <string name="debug_server_settings_request_delay_text">Задержка запросов: %1$.2f.s</string>
    <!--endregion-->

    <!--region UI-tools-->
    <string name="debug_ui_tools_scalpel_name">Scalpel</string>
    <string name="debug_ui_tools_scalpel_description">Отрисовывает иерархию вью как интерактивную 3D визуализацию. Запускается после встряхивания устройства.</string>
    <string name="debug_ui_tools_window_vqa_name">Window VQA</string>
    <string name="debug_ui_tools_window_vqa_description">Window VQA помогает дэбажить UI. Для запуска нужно произвести первоначальные настройки в самом приложении Window VQA, а затем можно запускать длительным нажатием на Home. Поддерживается с API 23.</string>
    <!--endregion-->

</resources>